# hazard-detection-api-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .railway-deploy  2025-08-09-backend-diff-aware-review-async-blocking-audit.txt  2025-08-09-caveat-the-messages-below-were-generated-by-the-u.txt  AIOREDIS_FIX_SUMMARY.md  API_FETCH_GUIDE.md  API_IMPLEMENTATION_SUMMARY.md  ASYNC_FIXES.patch  BACKEND_REVIEW.md  CHANGELOG.md  CLAUDE.md  CLIENT_GUIDE.md  CLIENT_README.md  Dockerfile  Dockerfile.emergency  ENDPOINTS_GUIDE.md  FRONTEND_MIGRATION_GUIDE.md  GEMINI.md  IMPROVEMENT_PLAN.md  Makefile  NODEJS_INTEGRATION_GUIDE.md  OPENVINO_VALIDATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PLAN.md  QUESTIONS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOY_FIXES.md  RAILWAY_EMERGENCY_FIX.md  RAILWAY_FINAL_FIX.md  RAILWAY_HEALTHCHECK_FIX.md  README.md  REALTIME_STREAMING_GUIDE.md  REFACTOR_SUMMARY.md  SERVICE_INTEGRATION.md  STREAMING_API_ARCHITECTURE.md  STREAMING_API_SUMMARY.md  TASKS.md  (+23 more)
.claude/: CLAUDE.md
.claude/agents/: detection-engine-lead.md  fe-platform-lead.md  interface-contracts-owner.md  node-server-lead.md  program-director.md  (+4 more)
app/: __init__.py  main.py  main_b3.py  main_minimal.py
best (13)_openvino_model/: best (13).xml  metadata.yaml
best-11-8-2025_openvino_model/: metadata.yaml
best0408_openvino_model/: best0408.xml  metadata.yaml
best_openvino_model/: best.xml  last_model_train12052025.xml  metadata .yaml  metadata.yaml
examples/: README.md  batchProcessing.js  package.json  quickStart.js  realTimeMonitoring.js  report_management_example.py  sessionExample.js  streaming_client.py
hazard-detection-api/: Dockerfile  requirements.txt
scripts/: verify_onnx.py
tests/: test_detection_b3.py  test_health_b3.py  test_openvino_api.py  test_report_flow_b3.py  test_services_b3.py
(+45 files in other folders)
